set media q to fix background image size and positioning on mobile to ignore viewport changes after loading

--- a/portolio-page/src/index.css
+++ b/portolio-page/src/index.css
@@ -17,6 +17,13 @@ html {
   background-repeat: no-repeat;
 }
 
+@media (max-width: 767px) {
+  #backgroundWrapper {
+    background-size: 3258px 1672px;
+    background-position: left bottom;
+  }
+}
+
 body {
   font-family: "Kanit", sans-serif;
   -webkit-font-smoothing: antialiased;
